--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -176,7 +176,7 @@ ch_be:
       upload: Datei zum Ufeladä
       upload_file: Datei ufeladä
 
-  sessions:
+  session:
     new:
       title: Amäudä
       description: Bitte gib di Benutzername u dis Passwort i zum z'Cryptopus chönne z bruche.
@@ -189,8 +189,6 @@ ch_be:
     newuser:
       title: Willkomme bim Cryptopus
       description: Mir hei für di es nöis Schlüssupaar ersteut. Viu Spass mitem Cryptopus.
-    noaccess:
-      title: Zuegriff verweigeret
     show_update_password:
       title: Passwort wechsle
       old: Auts Passwort
@@ -299,7 +297,7 @@ ch_be:
       uploaded_size_to_high: D Datei isch z gross für z ufelade. (Maximau 10MB)
       uploaded_filename_is_empty: D Datei muess e Name ha
       uploaded_file_inexistent: Die Datei existiert gar nid
-    sessions:
+    session:
       welcome: Willkomme bim Cryptopus. Zerscht muesch e nöie Account ersteue. Bitte wäu es sicheres Passwort.
       auth_failed: Irgendöppis vo dine Logindate isch fautsch
       only_local: Nume lokali Benutzer dörfe ires Passwort ändere.
