--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -5,6 +5,7 @@ new: "Neu"
 save: "Speichern"
 close: "Schliessen"
 newAccount: "Neuer Account"
+edit Account: "Account bearbeiten"
 account:
   form:
     teamPlaceholder: "Wählen Sie ein Team aus"
