--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -122,7 +122,7 @@ fr:
         title: La Liste de toutes les utilisateurs
         username: Nom d'utilisateur
         name: Nom
-        ldap_uid: LDAP UID
+        provider_uid: PROVIDER UID
         last_login_at: Dernière connexion à
         last_login_from: Dernière connexion de
         admin: Admin
