--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -179,6 +179,10 @@ en:
       title: Log in
       description: Please enter your username and password to access cryptopus
       submit: Login
+    local:
+      title: Log in
+      description: Please enter your username and password to access cryptopus
+      submit: Login
     destroy:
       title: Logout
       message: Bye
@@ -344,6 +348,7 @@ en:
       new_password_set: You successfully set the new password
       new_passwords_not_equal: New passwords not equal
       wrong_password: Invalid user / password
+      wrong_root: Login as root only from private IP accessible
       not_local: You are not a local user!
       locked: User is currently locked. Please try to login again a bit later or contact the administrator if your user has been locked permanently
     recryptrequests:
