--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -34,7 +34,7 @@ ch_be:
   last_login_date_and_from_country: "Ds letschtä Login isch am %{last_login_at} gsi vo %{last_login_from} (%{last_login_country})"
   last_login_date: "Ds letschtä Login isch am %{last_login_at} gsi"
   unencrypted_field_caption: nid verschlüsslet
-  group: Gruppä
+  folder: Gruppä
   team: Team
   move: Bewegä
   here: hiä
@@ -85,7 +85,7 @@ ch_be:
     title: 'Accounts'
     index_menu:
       create: Account ersteuä
-      group: Gruppä
+      folder: Gruppä
     show_menu:
       add_attachment: Anhang hinzufüegä
     edit:
@@ -159,7 +159,7 @@ ch_be:
       new:
         title: Nöie Benutzer
 
-  groups:
+  folders:
     title: Gruppe
     index_menu:
       create: Gruppe ersteue
@@ -169,7 +169,7 @@ ch_be:
       title: Gruppe ersteue
     show:
       move: Account zure angere Gruppe verschiebe
-      title: "Accounts vo dr Gruppe %{group_name} vom Team %{team_name}"
+      title: "Accounts vo dr Gruppe %{folder_name} vom Team %{team_name}"
   items:
     new:
       title: Ahang zum Account hinzuefüege
@@ -223,7 +223,7 @@ ch_be:
       private: Admins hei ke Zuegriff we si agwäut si
     show:
       title: "Gruppä vom Team %{team_name}"
-      group: Gruppä
+      folder: Gruppä
       members: Mitglider
       add_member: Mitglied hinzuefüege
       admins: Admins
@@ -293,7 +293,7 @@ ch_be:
       moved: Der Account isch erfougrich verschobe worde.
     application:
       wait: Wart bitte, bis dini Team Passwörter nöi verschlüsslet si worde.
-    groups:
+    folders:
       created: Di nöii Gruppe isch erfougrich ersteut worde.
       updated: D Gruppe isch erfougrich bearbeitet worde.
     items:
@@ -342,7 +342,7 @@ ch_be:
       team:
         name: Name
         description: Beschribig
-      group:
+      folder:
         name: Name
         description: Beschribig
       ldapsetting:
@@ -371,7 +371,7 @@ ch_be:
             accountname:
               blank: 'cha nid läär si'
               taken: 'isch bereit vergä'
-        group:
+        folder:
           attributes:
             name:
               blank: 'cha nid läär si'
