--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -59,7 +59,7 @@ fr:
     title: Comptes
     index_menu:
       create: Créer compte
-      group: Groupes
+      folder: Groupes
     show_menu:
       add_attachment: Ajouter un attachement
     edit:
@@ -142,7 +142,7 @@ fr:
       conf_admin: Conf Admin
       admin: Admin
 
-  groups:
+  folders:
     title: Groupes
     index_menu:
       create: Créer groupe
@@ -152,7 +152,7 @@ fr:
       title: Nouveau groupe
     show:
       move: Déplacer compte à un autre groupe
-      title: "Comptes du groupe %{group_name} de l'équipe %{team_name}"
+      title: "Comptes du groupe %{folder_name} de l'équipe %{team_name}"
   items:
     new:
       title: Ajouter un attachement au compte
@@ -204,7 +204,7 @@ fr:
       private: Administrateurs auront pas accès à votre équipe.
     show:
       title: "Groupes de l'équipe %{team_name}"
-      group: Groupe
+      folder: Groupe
       members: Membres
       add_member: Ajouter un membre
       admins: Admins
@@ -305,7 +305,7 @@ fr:
       moved: Le team a été déplacé avec succès.
     application:
       wait: S'il vous plaît attendre jusqu'à ce vos mots de passe a ètè nouveau cryptées.
-    groups:
+    folders:
       created: Groupe créé avec succès.
       updated: Groupe modifiée avec succès
     items:
@@ -356,7 +356,7 @@ fr:
       team:
         name: Nom
         description: Description
-      group:
+      folder:
         name: Nom
         description: Description
       ldapsetting:
@@ -384,7 +384,7 @@ fr:
             accountname:
               blank: ne peut pas être vide
               taken: est déjà pris
-        group:
+        folder:
           attributes:
             name:
               blank: ne peut pas être vide
