finish move password strength meter in separate Component

--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -20,3 +20,4 @@ veryBadPassword: "Sehr schlechtes Passwort!"
 badPassword: "Schlechtes Password!"
 goodPassword: "Gutes Passwort!"
 veryGoodPassword: "Sehr gutes Passwort!"
+passwordStrength: "Passwort stärke"
