--- a/frontend/translations/en-us.yaml
+++ b/frontend/translations/en-us.yaml
@@ -27,3 +27,4 @@ veryBadPassword: "Very bad Password!"
 badPassword: "Bad Password!"
 goodPassword: "Good Password!"
 veryGoodPassword: "Very good Password!"
+passwordStrength: "Password Strength"
