--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -59,7 +59,7 @@ fr:
     title: Comptes
     index_menu:
       create: Créer compte
-      folder: Groupes
+      folder: Dossier
     show_menu:
       add_attachment: Ajouter un attachement
     edit:
@@ -143,7 +143,7 @@ fr:
       admin: Admin
 
   folders:
-    title: Groupes
+    title: Dossiers
     index_menu:
       create: Créer groupe
     edit:
@@ -152,7 +152,7 @@ fr:
       title: Nouveau groupe
     show:
       move: Déplacer compte à un autre groupe
-      title: "Comptes du groupe %{folder_name} de l'équipe %{team_name}"
+      title: "Comptes du dossier %{folder_name} de l'équipe %{team_name}"
   items:
     new:
       title: Ajouter un attachement au compte
@@ -203,8 +203,8 @@ fr:
     description:
       private: Administrateurs auront pas accès à votre équipe.
     show:
-      title: "Groupes de l'équipe %{team_name}"
-      folder: Groupe
+      title: "Dossiers de l'équipe %{team_name}"
+      folder: Dossier
       members: Membres
       add_member: Ajouter un membre
       admins: Admins
@@ -306,8 +306,8 @@ fr:
     application:
       wait: S'il vous plaît attendre jusqu'à ce vos mots de passe a ètè nouveau cryptées.
     folders:
-      created: Groupe créé avec succès.
-      updated: Groupe modifiée avec succès
+      created: Dossier créé avec succès.
+      updated: Dossier modifiée avec succès
     items:
       uploaded: Fichier téléchargé avec succès.
       uploaded_size_to_high: Fichier est trop volumineux pour tèlècharger. (max. 10MB)
