--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -1,469 +1,1 @@
-#  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
-#  See the COPYING file at the top-level directory or at
-#  https://github.com/puzzle/cryptopus.
-
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
-de:
-  fallback: 'ACHTUNG! Dass ist die Cryptopus Fallback Umgebung. Schreiben sie keine neuen Daten da diese nicht erhalten bleiben!'
-  confirmation: Sind Sie sicher?
-  show: Anzeigen
-  edit: Editieren
-  update: Updaten
-  create: Erstellen
-  delete: Löschen
-  cancel: Abbrechen
-  add: Hinzufügen
-  description: Beschreibung
-  tag: Tag
-  username: Benutzername
-  password: Passwort
-  actions: Aktionen
-  download: Herunterladen
-  "yes": Ja
-  "no": Nein
-  help: Hilfe
-  version: Version
-  forgot_password: Passwort vergessen?
-  logout: Abmelden
-  auto_logout: automatisches Abmelden in
-  settings: Einstellungen
-  recrypt_requests: Recrypt Anfragen
-  users: Benutzer
-  user: Benutzer
-  change_password: Passwort wechseln
-  last_login_date_and_from: "Das letzte Login war am %{last_login_at} von %{last_login_from}"
-  last_login_date_and_from_country: "Das letzte Login war am %{last_login_at} von %{last_login_from} (%{last_login_country})"
-  last_login_date: "Das letzte Login war am %{last_login_at}"
-  unencrypted_field_caption: nicht verschlüsselt
-  folder: Ordner
-  team: Team
-  move: Bewegen"
-  here: Hier
-  new: Neu
-  save: Speichern
-  close: Schliessen
-
-  i18n:
-    language:
-      name: Deutsch
-
-  search:
-    title: Suche
-    index:
-      hi_user: "Hi %{username}! Du suchst ein Passwort?"
-      no_results_found: keine Resultate gefunden
-      type_to_search: Tippen um zu suchen...
-
-  accounts:
-    title: Accounts
-    index_menu:
-      create: Account erstellen
-      group: Gruppen
-    show_menu:
-      add_attachment: Anhang hinzufügen
-    edit:
-      title: Account editieren
-      random_password: Zufälliges Passwort
-      edit_password_placeholder: Klicken oder fokusieren für Eingabe ...
-      team_placeholder: Wählen Sie ein Team aus
-      folder_placeholder: Wählen Sie ein Ordner aus
-      password_strength: Passwort Stärke
-      password_strengths:
-        weak: Schwach
-        fair: Angemessen
-        good: Gut
-        strong: Stark
-    show:
-      title: "Account: %{account_name}"
-      last_change: "Letzte Änderung vor %{time_ago}"
-      attachments: Anhänge
-      file: Datei
-      show_password: Passwort anzeigen
-    new:
-      title: Neuer Account
-
-  admin:
-    title: "Admin"
-    maintenance_tasks:
-      index:
-        title: Wartungsaufgaben
-        unavailable: Keine Wartungsaufgaben vorhanden
-        maintenance_task: Wartungsaufgabe
-        run: Ausführen
-    settings:
-      index:
-        title: Einstellungen bearbeiten
-        save: Änderungen speichern
-        ldap: Ldap Verbindung testen
-        whitelist_placeholder_geo_ip_deactivated: Falls keine IP's angegeben sind werden alle IP's erlaubt
-    recryptrequests:
-      index:
-        title: Entschlüsselungs Anfragen
-        user: Benutzer
-        admin_required: Admin erforderlich
-        recrypt: Entschlüsseln
-      request:
-        request_sent: Es wurde eine Recrypt Anfrage gesendet. Bitte warten Sie, bis sie oder er Ihre Passwörter neu verschlüsselt hat.
-      uncrypterror:
-        new_password: Neues Passwort?!
-        ldap_password_changed: Ihr LDAP Passwort hat sich seit Ihrem letzten Login geändert.
-        ldap_enter_old_password: Bitte geben Sie Ihr altes LDAP Passwort ein um Ihren privaten Schlüssel zu entschlüsseln.
-        ldap_old_password: Ihr altes LDAP Passwort
-        ldap_new_password: Ihr neues LDAP Passwort
-        ldap_password: Ihr LDAP Passwort
-        forgot_password_recrypt: |
-          Falls Sie Ihr Passwort vergessen haben, werden nur Teams entschlüsselt welche nicht privat sind.
-          Sollten dadurch private Teams entstehen, auf die niemand Zugriff hat, werden diese gelöscht.
-          Nachdem das Formular abgesendet wurde, müssen Sie warten, bis ein Admin die Anfrage abgearbeitet hat.
-        recrypt: Recrypt
-        send: Anfrage senden
-    users:
-      index_menu:
-        create: Benutzer erstellen
-      edit:
-        title: Benutzer bearbeiten
-        reset_password: Passwort zurücksetzen
-        warning: Das zurücksetzen des Passworts eines Benutzers führt zum Verlust des Zugriff auf alle Private Teams und die löschung aller Teams, in denen er der einzige Member ist
-      index:
-        title: Liste aller Cryptopus Benutzer
-        username: Benutzername
-        name: Name
-        ldap_uid: LDAP UID
-        last_login_at: Letzte Anmeldung am
-        last_login_from: Letzte Anmeldung von
-        admin: Admin
-        action: Aktion
-        locked: Gesperrte Benutzer
-        unlock: Entsperren
-      last_teammember_teams:
-        message: Folgende Teams in denen der zu löschende User der letzte Member ist müssen gelöscht werden.
-        delete_user: Sind Sie sicher, dass Sie diesen Benutzer löschen möchten?
-        destroy: Benutzer löschen
-      new:
-        title: Neuer Benutzer
-    teams:
-      index:
-        title: Teams
-    user_roles:
-      user: Benutzer
-      conf_admin: Conf Admin
-      admin: Admin
-
-  groups:
-    title: Gruppen
-    index_menu:
-      create: Gruppe erstellen
-    edit:
-      title: Gruppe bearbeiten
-    new:
-      title: Gruppe erstellen
-    show:
-      move: Account zu einer anderen Gruppe verschieben
-      title: "Accounts der Gruppe %{group_name} des Teams %{team_name}"
-  items:
-    new:
-      title: Anhang zum Account hinzufügen
-      upload: Datei für das Hochladen
-      upload_file: Datei hochladen
-
-  session:
-    new:
-      title: Anmelden
-      description: Bitte geben Sie Ihren Benutzernamen und Ihr Passwort ein um Cryptopus zu verwenden.
-      submit: Anmelden
-    destroy:
-      title: Abmelden
-      message: Aufwiedersehen
-      hint: Bitte löschen Sie den Cache Ihres Browsers.
-      expired: Du wurdest automatisch abgemeldet.
-    newuser:
-      title: Willkommen bei Cryptopus
-      description: Wir haben für Sie ein neues Schlüsselpaar erstellt. Viel Vergnügen mit Cryptopus.
-    show_update_password:
-      title: Passwort wechseln
-      old: Altes Passwort
-      new: Neues Passwort
-      new_retype: Neues Passwort (wiederholen)
-      submit: Ändern
-
-  teammembers:
-    new:
-      title: Ein neues Teammitglied hinzufügen
-    confirm:
-      delete: "%{entry_label} von diesem team entfernen ?"
-    show: Mitglieder anzeigen
-    hide: Mitglieder verstecken
-
-  teams:
-    title: Teams
-    show:
-      title: "Gruppen des Teams %{team_name}"
-      group: Gruppe
-      members: Mitglieder
-      add_member: Mitglied hinzufügen
-      admins: Admins
-    form:
-      enabled: Aktiviert
-      private: Privat
-    index_menu:
-      create: Team erstellen
-    edit_button:
-      title: Bearbeite Team Eigenschaften.
-    config_button:
-      title: Füge hinzu oder entferne Mitglieder oder API Benutzer.
-    index:
-      title: 'Sie sind Mitglied der folgenden Teams:'
-      team: Team
-    new:
-      title: Neues Team erstellen
-    edit:
-      title: Team bearbeiten
-    description:
-      private: Admins haben keinen Zugriff wenn angewählt
-    configure:
-      title: Teammitglieder und Api Nutzer anpassen
-
-  profile:
-    index:
-      title: "Profil von %{label}"
-    info:
-      info: Info
-      last_login_at: Letztes Login um
-      last_login_from: Letztes Login von
-    api_users:
-      api_users: Api Benutzer
-      no_api_users: keine Api Benutzer
-      username: Benutzername
-      description: Beschreibung
-      enter_description: Geben Sie eine Beschreibung ein..
-      valid_until: Gültig bis
-      valid_for: Gültig für
-      last_login_at: Letztes Login um
-      last_login_from: Letztes Login von
-      locked: Blockiert
-      options:
-        one_min: Eine Minute
-        five_mins: Fünf Minuten
-        twelve_hours: Zwölf Stunden
-        infinite: Unbegrenzt
-      delete:
-        title: Entferne Api-User
-        content: "Lösche Api-User %{username}?"
-
-  flashes:
-    api:
-      admin:
-        users:
-          toggle:
-            empowered: "%{username} hat nun Admin-Rechte"
-            disempowered: "Dem Benutzer %{username} wurden die Admin-Rechte entzogen"
-          destroy:
-            own_user: "Eigener Benutzer kann nicht gelöscht werden"
-          no_access: "Zugriff verweigert"
-        settings:
-          test_ldap_connection:
-            successful: "Verbindung zum Ldap Server %{hostname} erfolgreich"
-            failed: "Verbindung zum Ldap Server %{hostname} fehlgeschlagen"
-            no_hostname_present: "Kein Hostname vorhanden"
-      api-users:
-        create: "%{username} wurde erstellt"
-        update:
-          description: "%{username}'s Beschreibung wurde aktualiert"
-          valid_for: "Benutzer %{username} wird nach dem nächsten Erneuern %{valid_for} gültig sein"
-          time:
-            one_min: für eine Minute
-            five_mins: für fünf Minuten
-            twelve_hours: für zwölf Stunden
-            infinite: bis zum Ende der Zeit
-        destroy: "%{username} wurde entfernt"
-        lock: "%{username} wurde gesperrt"
-        unlock: "%{username} wurde entsperrt"
-        token:
-          renew: "%{username} wurde erneuert, neues Token: %{token}"
-      members:
-        added: "%{username} wurde erfolgreich hinzugefügt"
-        removed: "%{username} wurde erfolgreich entfernt"
-    wizard:
-      fill_password_fields: Bitte füllen Sie alle Felder aus
-      paswords_do_not_match: Die Passwörter stimmen nicht überein
-    admin:
-      admin:
-        no_access: Zugriff verweigert
-      settings:
-        example: Dies sind Beispieleinstellungen. Bitte überschreiben Sie sie mit Ihren Einstellungen.
-        successfully_updated: Ihre Einstellungen wurden erfolgreich angepasst.
-      recryptrequests:
-        some: "Einige Passwörter wurden erfolgreich wiederverschlüsselt für %{user_name}."
-        all: "Alle Passwörter wurden erfolgreich wiederverschlüsselt für %{user_name}."
-        resetpassword:
-          success: Das Passwort wurde erfolgreich gesetzt
-          required: Das Passwort darf nicht leer sein
-      users:
-        created: Der neue Benutzer wurde erfolgreich erstellt.
-        destroy:
-          own_user: Eigener Benutzer kann nicht gelöscht werden
-          root: Root kann nicht gelöscht werden
-        update:
-          root: Root kann nicht aktualisiert werden
-          ldap: Ldap User kann nicht aktualisiert werden
-      maintenance_tasks:
-        succeed: Wartungsaufgabe wurde erfolgreich durchgeführt
-        failed: Wartungsaufgabe ist gescheitert. Siehe Logs für mehr Details.
-        ldap_connection:
-          failed: Kein konfigurierter Ldap-Server konnte erreicht werden.
-
-    accounts:
-      created: Der neue Account wurde erfolgreich erstellt.
-      updated: Der Account wurde erfolgreich aktualisiert.
-      moved: Der Account wurde erfolgreich veschoben
-    application:
-      wait: Bitte warten Sie, bis  Ihre Team Passwörter neu verschlüsselt wurden.
-    groups:
-      created: Die neue Gruppe wurde erfolgreich erstellt.
-      updated: Die Gruppe wurde erfolgreich bearbeitet.
-    items:
-      uploaded: Die Datei wurde erfolgreich hochgeladen.
-      uploaded_size_to_high: Die Datei ist zu gross zum hochladen. (Max. 10MB)
-      uploaded_filename_is_empty: Die Datei muss benannt sein
-      uploaded_file_inexistent: Datei ist inexistent
-    session:
-      welcome: Willkommen bei Cryptopus. Zuerst müssen Sie einen Account erstellen. Bitte wählen Sie ein sicheres Passwort.
-      auth_failed: Ungültiger Benutzername / Passwort.
-      only_local: Nur lokale Benutzer dürfen ihr Passwort ändern.
-      new_password_set: Das neue Passwort wurde erfolgreich gesetzt.
-      new_passwords_not_equal: Die neuen Passwörter sind nicht gleich.
-      not_local: Sie sind kein lokaler Benutzer!
-      locked: Der Benutzer ist momentan gesperrt. Bitte versuchen Sie es später nocheinmal oder kontaktiern Sie den Administrator.
-      weak_password: Um die Sicherheit zu verbessern, sollten Sie ein komplexeres Passwort wählen
-    recryptrequests:
-      recrypted: Ihr Passwort wurde erfolgreich neu verschlüsselt.
-      wait: Bitte warten Sie, bis Ihre Team Passwörter neu verschlüsselt wurden.
-      wrong_password: Das Passwort war falsch.
-    teams:
-      wrong_user_password: Geben Sie einen gültigen Benutzernamen und ein korrektes Passwort ein oder prüfen Sie Ihre LDAP Einstellungen.
-      created: Das Team wurde erfolgreich erstellt.
-      updated: Das Team wurde erfolgreich angepasst.
-      deleted: Das Team wurde erfolgreich gelöscht
-      cannot_delete: Nur Admins können das Team löschen
-      no_member: Sie sind nicht Mitglied dieses Teams
-      not_existing: "Es existiert kein Team mit der Id %{id}"
-    teammembers:
-      could_not_remove_last_teammember: Der letzte Benutzer eines Teams kann nicht entfernt werden
-      could_not_remove_admin_from_private_team: Admins können nicht aus einem privaten Team gelöscht werden
-
-  helpers:
-    label:
-      user:
-        username: Benutzername
-        password: Passwort
-        admin: Admin
-        givenname: Vorname
-        surname: Nachname
-        submit: Erstellen
-      account:
-        account: Account
-        account_name: Accountname
-        username: Benutzername
-        password: Passwort
-        description: Beschreibung
-      team:
-        name: Name
-        description: Beschreibung
-      group:
-        name: Name
-        description: Beschreibung
-      ldapsetting:
-        portnumber: Port
-        bind_password: Bind Passwort
-        encryption: Verschlüsselung
-
-  confirm:
-    delete: "%{entry_class} %{entry_label} löschen?"
-    change_admin: Admin-Rechte geben/entziehen?
-    deleteWithTeams: "Lösche alle Teams in denen %{username} der letze Team Member ist"
-
-
-#Validation Errors
-  activerecord:
-    attributes:
-      user:
-        username: Benutzername
-    errors:
-      template:
-        body: ''
-        header: ''
-      models:
-        account:
-          attributes:
-            accountname:
-              blank: kann nicht leer sein
-              taken: ist bereits vergeben
-        group:
-          attributes:
-            name:
-              blank: kann nicht leer sein
-              taken: ist bereits vergeben
-        user:
-          new_password_invalid: Ihr neues Passwort war falsch
-          old_password_invalid: Ihr altes Passwort war falsch
-          attributes:
-            username:
-              blank: kann nicht leer sein
-              taken: ist bereits vergeben
-        item:
-          attributes:
-            filename:
-              blank: Filename kann nicht leer sein
-              taken: Filename ist bereits vergeben
-
-  datetime:
-    distance_in_words:
-      about_x_hours:
-        one: etwa eine Stunde
-        other: "etwa %{count} Stunden"
-      about_x_months:
-        one: etwa ein Monat
-        other: "etwa %{count} Monate"
-      about_x_years:
-        one: etwa ein Jahr
-        other: "etwa %{count} Jahren"
-      almost_x_years:
-        one: fast ein Jahr
-        other: "fast %{count} Jahre"
-      half_a_minute: eine halbe Minute
-      less_than_x_minutes:
-        one: weniger als eine Minute
-        other: "weniger als %{count} Minuten"
-      less_than_x_seconds:
-        one: weniger als eine Sekunde
-        other: "weniger als %{count} Sekunden"
-      over_x_years:
-        one: mehr als ein Jahr
-        other: "mehr als %{count} Jahre"
-      x_days:
-        one: ein Tag
-        other: "%{count} Tage"
-      x_minutes:
-        one: eine Minute
-        other: "%{count} Minuten"
-      x_months:
-        one: ein Monat
-        other: "%{count} Monate"
-      x_seconds:
-        one: eine Sekunde
-        other: "%{count} Sekunden"
-
-  password_strength:
-    weak: Das Passwort ist unsicher
-    good: Das Passwort genügt
-    strong: Das Passwort ist stark!
-
-  #Pundit
-  pundit:
-    default: Zugriff verweigert
-    team_policy:
-      update?:  Du bist nicht Mitglied dieses Teams
-      destroy?: Nur Admins dürfen Teams löschen
-
+../../config/locales/de.yml
