--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -1,461 +1,1 @@
-#  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
-#  See the COPYING file at the top-level directory or at
-#  https://github.com/puzzle/cryptopus.
-
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
-fr:
-  fallback: 'ATTENTION! Ça c’est l’environment Fallback de Cryptopus. Ne créez pas des nouvelles données parce qu’elles ne seront pas sauvées!'
-  confirmation: Etes-vous sûr?
-  show: Montrer
-  edit: Modifier
-  update: Mettre à jour
-  create: Créer
-  delete: Supprimer
-  cancel: Annuler
-  add: Ajoutea
-  description: Description
-  tag: Tag
-  username: Nom d'utilisateur
-  password: Mot de passe
-  actions: Actions
-  download: Télécharger
-  "yes": Oui
-  "no": Non
-  forgot_password: Mot de passe oublié?
-  logout: Déconnexion
-  auto_logout: Déconnexion automatique en
-  settings: Paramètres
-  recrypt_requests: Demandes de re crypt
-  users: Utilisateur
-  user: Utilisateur
-  change_password: Changer le mot de passe
-  last_login_date_and_from: "La dernière connexion était le %{last_login_at} de %{last_login_from}"
-  last_login_date_and_from_country: "La dernière connexion était le %{last_login_at} de %{last_login_from} (%{last_login_country})"
-  last_login_date: "La dernière connexion était le %{last_login_at}"
-  last_login: "La dernière connexion était le %{last_login_at} de %{last_login_from}"
-  unencrypted_field_caption: ne pas crypté
-  folder: Dossier
-  team: Équipe
-  move: Mouvoir
-  here: Ici
-  new: Nouveau
-  save: Sauvegarder
-  close: Fermer
-
-  i18n:
-    language:
-      name: Français
-
-  search:
-    title: Recherche
-    index:
-      hi_user: "Salut %{username}! Vous cherchez un mot de passe?"
-      no_results_found: Aucun résultat trouvé
-      type_to_search: Appuyez pour rechercher...
-
-  accounts:
-    title: Comptes
-    index_menu:
-      create: Créer compte
-      group: Groupes
-    show_menu:
-      add_attachment: Ajouter un attachement
-    edit:
-      title: Modifier le compte
-      random_password: Mot de passe aléatoire
-      team_placeholder: Choisissez une équipe
-      folder_placeholder: Choisissez un dossier
-      password_strength: Force du mot de passe
-      password_strengths:
-        weak: Faible
-        fair: Approprié
-        good: Bien
-        strong: Fort
-    show:
-      title: "Compte: %{account_name}"
-      last_change: "Dernière mise à jour il ya %{time_ago}"
-      attachments: Attachements
-      file: Fichier
-      show_password: Afficher le mot de passe
-    new:
-      title: Nouveau compte
-
-  admin:
-    title: "Admin"
-    maintenance_tasks:
-      index:
-        title: Les tâches de maintenance
-        unavailable: Il n'y a pas de tâches de maintenance
-        maintenance_task: Tâche de maintenance
-        run: effectuer
-    settings:
-      index:
-        title: Modifier les paramètres
-        save: Sauvegarder les modifications
-        ldap: Tester la connexion LDAP
-    recryptrequests:
-      index:
-        title: Demandes de re crypt
-        user: Utilisateur
-        admin_required: Admin requis
-        recrypt: re crypt
-      request:
-        request_sent: Une demande de re crypt vos mots de passe de groupe a été envoyée. S'il vous plaît attendre jusqu'à ce qu'elle re crypté vos nouveaux mots de passe.
-      uncrypterror:
-        new_password: Nouveau mot de passe?!
-        ldap_password_changed: Votre mot de passe de LDAP a changé depuis votre dernière connexion.
-        ldap_enter_old_password: S'il vous plaît entrez votre ancien mot de passe pour déchiffrer votre clé privée.
-        ldap_old_password: Votre ancien mot de passe de LDAP
-        ldap_new_password: Votre nouveau mot de passe de LDAP
-        ldap_password: Votre mot de passe de LDAP
-        forgot_password_recrypt: |
-          Si vous avez oublié votre mot de passe, seulement celles équipes sont décryptées qui ne sont pas privées.
-          Tout les équipes sur laquelles personnes n'a accès sont supprimées.
-          Après l'envoi du formulaire, vous devez attendre jusqu'à ce qu'un administrateur a traité la demande.
-        recrypt: Re crypter
-        send: Envoyer la demande
-    users:
-      index_menu:
-        create: Créer utilisateur
-      edit:
-        title: Modifier l'utilisatuer
-        reset_password: Réinitialiser mot de passe
-        warning: Avec la réinitialisation du mot de passe l’utilisateur perd l’access a tout ses teams privées et tout les teams ou il est le seul membre seront supprimées
-      index:
-        title: La Liste de toutes les utilisateurs
-        username: Nom d'utilisateur
-        name: Nom
-        ldap_uid: LDAP UID
-        last_login_at: Dernière connexion à
-        last_login_from: Dernière connexion de
-        admin: Admin
-        action: Action
-        locked: Bloqué utilisateurs
-        unlock: déverrouillage
-      last_teammember_teams:
-        message: L'équipe suivante sera supprimée, car l'utilisateur est son dernier membre.
-        delete_user: Êtes-vous sûr de vouloir supprimer cet utilisateur?
-        destroy: supprimer l'utilisateur
-      new:
-        title: Nouvel utilisateur
-    teams:
-      index:
-        title: Teams
-    user_roles:
-      user: Utilisateur
-      conf_admin: Conf Admin
-      admin: Admin
-
-  groups:
-    title: Groupes
-    index_menu:
-      create: Créer groupe
-    edit:
-      title: Modifier le groupe
-    new:
-      title: Nouveau groupe
-    show:
-      move: Déplacer compte à un autre groupe
-      title: "Comptes du groupe %{group_name} de l'équipe %{team_name}"
-  items:
-    new:
-      title: Ajouter un attachement au compte
-      upload: Fichier de téléchargement
-      upload_file: Télécharge le fichier
-
-  session:
-    new:
-      title: Identifiez-vous
-      description: S'il vous plaît entrer un nom d'utilisateur valide et mot de passe.
-      submit: S'identifier
-    destroy:
-      title: Déconnexion
-      message: Au revoir
-      hint: S'il vous plaît vider le cache de votre navigateur.
-      expired: Tu as été automatiquement déconnecté
-    newuser:
-      title: Bienvenue à Cryptopus
-      description: Nous avons créé une nouvelle paire de clés pour vous. Amusez-vous avec Cryptopus.
-    show_update_password:
-      title: Changer le mot de passe
-      old: Ancien mot de passe
-      new: Nouveau mot de passe
-      new_retype: Nouveau mot de passe (retaper)
-      submit: Change
-
-  teammembers:
-    new:
-      title: Ajouter un nouveau membre de l'équipe
-    confirm:
-      delete: "Supprimer %{entry_label} de cette équipe ?"
-    show: Voir les membres
-    hide: Membres masquer
-
-  teams:
-    title: Équipes
-    form:
-      enabled: Activé
-      private: Privé
-      private_hint: Administrateurs n'ont pas accès à cette équipe.
-    index_menu:
-      create: Créer équipe
-    index:
-      title: 'Vous êtes membre des équipes suivantes:'
-      team: Équipe
-    new:
-      title: Créer une nouvelle équipe
-    description:
-      private: Administrateurs auront pas accès à votre équipe.
-    show:
-      title: "Groupes de l'équipe %{team_name}"
-      group: Groupe
-      members: Membres
-      add_member: Ajouter un membre
-      admins: Admins
-    configure:
-      title: Adjuster les membres d'équipe et les utilisateurs d'API
-  profile:
-    index:
-      title: "Profil de %{label}"
-    info:
-      info: Info
-      last_login_at: Dernière connexion à
-      last_login_from: Dernière connexion de
-    api_users:
-      api_users: Utilisateurs d'Api
-      no_api_users: Il n'y a pas d'utilisateurs d'Api
-      username: Nom d'utilisateur
-      description: Description
-      enter_description: Entrez une description..
-      valid_until: Valable jusque
-      valid_for: Valable
-      last_login_at: Dernière connexion à
-      last_login_from: Dernière connexion de
-      locked: Bloqué
-      options:
-        one_min: Une minute
-        five_mins: Cinq minutes
-        twelve_hours: Douze heures
-        infinite: Illimité
-      delete:
-        title: Supprimer Api-User
-        content: "Est-ce que vous voulez supprimer l'utilisateur d'Api %{username}?"
-
-  flashes:
-    api:
-      admin:
-        users:
-          toggle:
-            empowerd: L'usutilisateur a reçu les droits d administrateur
-            disempowerd: L'utilisateur a perdu les droits d'administrateur
-          destroy:
-            own_user: Actuel de l'utilisateur ne peut pas être supprimé
-          no_access: Accès refusé
-        settings:
-          test_ldap_connection:
-            successful: Connexion au serveur Ldap réussie
-            failed: Connexion au serveur Ldap échoué
-            no_hostname_present: Aucun nom d'hôte n'existe
-      api-users:
-        create: "%{username} a été crée"
-        update:
-          description: "La description de %{username} a été mis à jour"
-          valid_for: "L'Utilisateur %{username} sera valable %{valid_for} dès le prochain renouvellement"
-          time:
-            one_min: pour une minute
-            five_mins: pour cinq minutes
-            twelve_hours: pour douze heurs
-            infinite: infiniment
-        destroy: "%{username} a été supprime"
-        lock: "%{username} est maintenant bloqué"
-        unlock: "%{username} n'est plus bloqué"
-        token:
-          renew: "%{username} a été renouvelé, nouveau jeton: %{token}"
-    members:
-      added: "%{username} a été enlevé avec succès à l'équipe"
-      removed: "%{username} a été ajouté avec succès à l'équipe"
-    wizard:
-      fill_password_fields: S'il vous plaît remplir tous les champs
-      paswords_do_not_match: Les mots de passe ne correspondent pas
-    admin:
-      admin:
-        no_access: Accès refusé
-      settings:
-        example: Ce sont des exemples de paramètres. S'il vous plaît écraser avec vos paramètres.
-        successfully_updated: Vos paramètres ont été modifiés avec succès.
-      recryptrequests:
-        some: "Certains mots de passe ont été re crypté pour %{user_name}."
-        all: "Tous les mots de passe ont été re crypté pour %{user_name}."
-        resetpassword:
-          success: Mot de passe réinitialisé avec succès
-          required: Le mot de passe ne peut pas être vide
-      users:
-        created: Utilisateur créé avec succès.
-        destroy:
-          own_user: Actuel de l'utilisateur ne peut pas être supprimé
-          root: Root ne peut pas être supprimé
-        update:
-          root: Root ne peuvent pas être mis à jour
-          ldap: Ldap utilisateur ne peuvent pas être mis à jour
-      maintenance_tasks:
-        succeed: La tâche a été exécutée avec succès..
-        failed: La tâche a échoué. Consultez les journaux pour plus d'informations.
-        ldap_connection:
-          failed: Aucunt serveur LDAP configuré n'a pu être atteint.
-
-    accounts:
-      created: Compte créé avec succès.
-      updated: Compte modifiée avec succès.
-      moved: Le team a été déplacé avec succès.
-    application:
-      wait: S'il vous plaît attendre jusqu'à ce vos mots de passe a ètè nouveau cryptées.
-    groups:
-      created: Groupe créé avec succès.
-      updated: Groupe modifiée avec succès
-    items:
-      uploaded: Fichier téléchargé avec succès.
-      uploaded_size_to_high: Fichier est trop volumineux pour tèlècharger. (max. 10MB)
-      uploaded_filename_is_empty: Le fichier n'a pas été nommé
-      uploaded_file_inexistent: Fichier est inexistant
-    session:
-      welcome: Bienvenue à Cryptopus, vous devez d'abord créer un nouveau compte. S'il vous plaît entrez un nouveau mot de passe.
-      auth_failed: L'authentification a échoué! Saisissez un nom d'utilisateur et mot de passe.
-      only_local: Only local users are allowed to change their password.
-      new_password_set: Vous mis à jour avec succès le nouveau mot de passe.
-      new_passwords_not_equal: Nouveaux mots de passe n'est pas égal.
-      wrong_password: Mot de passe incorrect.
-      weak_password: Pour améliorer la sécurité vous devez déterminer un mot de passe utilisateur plus complexe.
-      not_local: Vous n'êtes pas un utilisateur local!
-      locked: Votre compte est actuellement verouillé. Essayez de vous connecter à nouveau dans un instant, ou contactez l'administrateur si le verrouillage persiste
-    recryptrequests:
-      recrypted: Vous avez réussi re crypté le mot de passe.
-      wait: S'il vous plaît attendez que Racine a recrypted vos mots de passe de l'équipe.
-      wrong_password: Votre mot de passe était incorrect
-    teams:
-      wrong_user_password: Saisissez un nom d'utilisateur et mot de passe ou vérifier les paramètres LDAP.
-      created: Créé avec succès une nouvelle équipe.
-      updated: L'équipe a été mise à jour avec succès.
-      deleted: L'équipe a été supprimé.
-      cannot_delete: Vous pouvez seulement supprimer une équipe si vous etes un admin.
-      no_member: Vous n'êtes pas membre de cette équipe
-      not_existing: "Il n'y a pas d'équipe avec l'id %{id}"
-    teammembers:
-      could_not_remove_last_teammember: Il n’est pas possible de supprimer le dernier utilisateur de l'équipe
-      could_not_remove_admin_from_private_team: Il n’est pas possible de supprimer un admin d'une équipe privée
-
-  helpers:
-    label:
-      user:
-        username: Nom d'utilisateur
-        password: Mot de passe
-        admin: Admin
-        givenname: Prénom
-        surname: Nom de famille
-      account:
-        account: Compte
-        account_name: Nom du compte
-        username: Nom d'utilisateur
-        password: Mot de passe
-        description: Description
-      team:
-        name: Nom
-        description: Description
-      group:
-        name: Nom
-        description: Description
-      ldapsetting:
-        portnumber: Port
-        bind_password: Mot de passe de Bind
-        encryption: Chiffrement
-
-  confirm:
-    delete: "Supprimez %{entry_class} %{entry_label} ?"
-    changeAdmin: donner/enlever les droits de l'administrateur?
-    deleteWithTeams: "Supprimer toutes les équipe où %{username} est le dernier."
-
-#Validation Errors
-  activerecord:
-    attributes:
-      user:
-        username: Nom d'utilisateur
-    errors:
-      template:
-        body: ''
-        header: ''
-      models:
-        account:
-          attributes:
-            accountname:
-              blank: ne peut pas être vide
-              taken: est déjà pris
-        group:
-          attributes:
-            name:
-              blank: ne peut pas être vide
-              taken: est déjà pris
-        user:
-          new_password_invalid: Votre nouveau mot de passe était incorrect
-          old_password_invalid: Votre ancien mot de passe était incorrect
-          attributes:
-            username:
-              blank: ne peut pas être vide
-              taken: est déjà pris
-        item:
-          attributes:
-            filename:
-              blank: Filename ne peut pas être vide
-              taken: Filename est déjà pris
-
-
-  datetime:
-    distance_in_words:
-      about_x_hours:
-        one: environ une heure
-        other: "environ %{count} heures"
-      about_x_months:
-        one: environ un mois
-        other: "environ %{count} mois"
-      about_x_years:
-        one: environ un an
-        other: "environ %{count} ans"
-      almost_x_years:
-        one: presqu'un an
-        other: "presque %{count} ans"
-      half_a_minute: une demi-minute
-      less_than_x_minutes:
-        one: moins d'une minute
-        other: "moins de %{count} minutes"
-        zero: moins d'une minute
-      less_than_x_seconds:
-        one: moins d'une seconde
-        other: "moins de %{count} secondes"
-        zero: moins d'une seconde
-      over_x_years:
-        one: plus d'un an
-        other: "plus de %{count} ans"
-      x_days:
-        one: 1 jour
-        other: "%{count} jours"
-      x_minutes:
-        one: 1 minute
-        other: "%{count} minutes"
-      x_months:
-        one: 1 mois
-        other: "%{count} mois"
-      x_seconds:
-        one: 1 seconde
-        other: "%{count} secondes"
-
-  password_strength:
-    weak: Le mot de passe est faible
-    good: Le mot de passe est bon
-    strong: Le mot de passe est forte!
-
-  #Pundit
-  pundit:
-    default: Accès refusé
-    team_policy:
-      update?: Vous n'êtes pas membre de cette équipe
-      destroy?: Seul l'administrateur peut supprimer des équipes
+../../config/locales/fr.yml
